Update metadata references from crabtree_artifacts to artifacts across multiple files for consistency and improved data handling.

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -17,7 +17,7 @@ layout: page
       <div class="card-body">
         <h2 class="card-title h5">Collection Contents</h2>
         <p class="card-text">
-          {% assign artifacts = site.data.crabtree_artifacts | where_exp: 'i', 'i.objectid and i.parentid == nil' | size %}
+          {% assign artifacts = site.data.artifacts | where_exp: 'i', 'i.objectid and i.parentid == nil' | size %}
           <a class="text-dark" href="{{ '/artifacts/browse.html' | relative_url }}">{{ artifacts }} Artifacts 
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi icon-sprite text-body" viewBox="0 0 16 16" aria-hidden="true">
             <path d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103z"/>
