Refactor metadata references for consistency across multiple files

--- a/_layouts/item/3d_model.html
+++ b/_layouts/item/3d_model.html
@@ -1,5 +1,5 @@
 ---
-# basic layout for crabtree 3d models
+# basic layout for  3d models
 # if item has images, display in gallery
 # each model item has 4 child records which are links to different download formats, mtl, obj, stl, x3d
 layout: item/artifact-page-base
