--- a/_layouts/item/artifact-page-base.html
+++ b/_layouts/item/artifact-page-base.html
@@ -1,5 +1,5 @@
 ---
-# base layout for Crabtree Artifacts 
+# base layout for Artifacts 
 # base layout for other item display_template layouts
 # adds breadcrumbs and title at top; citation box, rights box, and browse buttons at bottom
 layout: default
