Add Public Sans font styles to font-production.css

--- a/_includes/index/content-alert.html
+++ b/_includes/index/content-alert.html
@@ -12,13 +12,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>These materials are a product of a time and place in history and should be viewed within their historical context. To maintain historical accuracy, the materials appear as they were originally created to serve as historical evidence of the social mindsets, occurrences, behaviors, and norms of their time.</p>
-                <p>They do not reflect the current views of the University of Idaho. For more information on how we treat archival materials with offensive or disturbing content, please see the University of Idaho Library Special Collections and Archives <a href="https://www.lib.uidaho.edu/special-collections/policies.html#offensive-material-in-archival-collections">Offensive Content Policy</a>.</p>
-                <p>Content in this collection may include:</p>
-                <ul>
-                    <li>Historical content using racial slurs or other offensive language.</li>
-                    <li>Disturbing and graphic images on injuries. These images are blurred and can only be viewed by clicking the image on the individual item page.</li>
-                </ul>
+                <p>Add disclaimer here.</p>
             </div>
         </div>
     </div>
