--- a/_includes/feature/audio.html
+++ b/_includes/feature/audio.html
@@ -10,7 +10,7 @@
     Options: 
     - "objectid" = several options below (required)
         - an objectid of an audio item in this collection, e.g. "demo_003" 
-        - an external link to an MP3 file hosted elsewhere, e.g. "https://www.lib.uidaho.edu/digital/mp3s/Clouds.mp3"   
+        - an external link to an MP3 file hosted elsewhere
         - a relative link to an MP3 file somewhere else in this repository, e.g. "/assets/example.mp3"
     - "caption" = by default the figure include automatically adds the title of the item from your metadata. The caption option allows you to manually add a different caption, or give the value false for none. (optional)
 
