--- a/_includes/feature/pdf.html
+++ b/_includes/feature/pdf.html
@@ -11,7 +11,7 @@
     Options: 
     - "objectid" = several options below (required)
         1. an objectid of a PDF item in this collection, e.g. "demo_004"
-        2. an external link to a PDF file hosted elsewhere, e.g. "https://www.lib.uidaho.edu/digital/pdfs/cloudtypes.pdf"   
+        2. an external link to a PDF file hosted elsewhere
         3. a relative link to a PDF file somewhere else in this repository, e.g. "/assets/pdfs/sometrees.pdf"
     - "caption" = by default the figure include automatically adds the title of the item from your metadata. The caption option allows you to manually add a different caption, or give the value false for none. (optional)
     - "width" = will use responsive sizing to set the % size on desktop (will be 100% on mobile), choose from "25", "50", "75", or "100" (optional)
