--- a/_includes/feature/video.html
+++ b/_includes/feature/video.html
@@ -10,10 +10,10 @@
 
     Options: 
     - "objectid" = several options below (required)
-        1. an objectid of a video item in this collection, e.g. "demo_003"
-        2. a full URL to a video hosted on YouTube, e.g. https://youtu.be/dbKNr3wuiuQ
-        3. a full URL to a video hosted on Vimeo, e.g. https://vimeo.com/464555587 
-        4. a full URL to an external video file (supported by browsers, generally mp4), e.g. "https://www.lib.uidaho.edu/digital/videos/fluffyclouds.mp4"
+        1. an objectid of a video item in this collection
+        2. a full URL to a video hosted on YouTube
+        3. a full URL to a video hosted on Vimeo
+        4. a full URL to an external video file (supported by browsers, generally mp4)
         5. a relative link to a video file stored in this repository (that is not included in the collection), i.e. "/assets/videos/cloudyskies.mp4"  
     - "caption" = by default the figure include automatically adds the title of the item from your metadata. The caption option allows you to manually add a different caption, or give the value false for none. (optional)
     - "width" = will use responsive sizing to set the % size on desktop (will be 100% on mobile), choose from "25", "50", "75", or "100" (optional)
