Update metadata and links for Swarthmore College's Peace Collection
- Updated URLs in complete_metadata.csv, published_metadata.csv, and metadata.json to point to the new GitHub Pages site.
- Changed homepage and data links in datapackage.json and search.json to reflect the new site URL.
- Adjusted subject links in subjects.csv and subjects.json to direct to the updated site.
- Modified HTML files (collection.html, index.html, learn.html, items, and search) to use Bootstrap 5 from jsDelivr and updated script sources.
- Removed outdated metadata-template.csv file.

--- a/_includes/js/table-js.html
+++ b/_includes/js/table-js.html
@@ -2,7 +2,12 @@
 {%- assign config-file = 'config-table_' | append: page.metadata | remove: '_test' -%}
 {% assign fcount = site.data[config-file] | size %}
 <!-- load DataTables with jquery bundled -->
-<script type="text/javascript" language="javascript" src="{{ '/bootstrap5/datatables/datatables.min.js' | prepend: site.digital-assets }}"></script>
+<script
+  type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/datatables.net@1.13.4/js/jquery.dataTables.min.js"
+  integrity="sha384-INSERT_HASH_HERE"
+  crossorigin="anonymous">
+</script>
 <script>
 /* use jquery to initialize DataTables and load collection data */
 $(document).ready( function () {
