--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,8 +1,17 @@
 <!-- Bootstrap bundle JS -->
-<script src="{{ '/bootstrap5/bootstrap.bundle.min.js' | prepend: site.digital-assets }}"></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-…<your-hash>…"
+  crossorigin="anonymous"
+></script>
 <!-- load other js -->
-<script src="{{ '/js/lazysizes.min.js' | prepend: site.digital-assets }}" async></script>
-{% if layout.gallery == true or page.gallery == true %}<script src="{{ '/js/spotlight.bundle.js' | prepend: site.digital-assets }}" defer></script>{% endif %}
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js"
+  integrity="sha512-…<your-hash>…"
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+></script>
+{% if layout.gallery == true or page.gallery == true %}<script src="https://cdn.jsdelivr.net/npm/spotlight.js@latest/dist/spotlight.bundle.js" defer></script>{% endif %}
 {% if page.custom-foot or layout.custom-foot %}
 {%- assign page_feet = page.custom-foot | split: ";" -%}
 {%- assign layout_feet = layout.custom-foot | split: ";" -%}
