--- a/_includes/head/head.html
+++ b/_includes/head/head.html
@@ -20,14 +20,68 @@
 <link href="/assets/css/font-production.css" rel="stylesheet">
 {% else %}
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+{% endif %}<!-- Bootstrap 5 CSS from jsDelivr -->
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+  integrity="sha384-–INSERT_HASH_HERE–"
+  crossorigin="anonymous"
+  type="text/css"
+/>
+
+{% if page.layout == 'data' %}
+  <!-- DataTables CSS from jsDelivr -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/datatables.net-dt@1.13.4/css/jquery.dataTables.min.css"
+    integrity="sha384-–INSERT_HASH_HERE–"
+    crossorigin="anonymous"
+    type="text/css"
+  >
 {% endif %}
-<link rel="stylesheet" href="{{ '/bootstrap5/bootstrap.min.css' | prepend: site.digital-assets }}" type="text/css">
-{% if page.layout == 'data' %}<link rel="stylesheet" type="text/css" href="{{ '/bootstrap5/datatables/datatables.min.css' | prepend: site.digital-assets }}">{%- endif -%}
-{% if page.layout == 'map' %}<link rel="stylesheet" href="{{ '/leaflet/leaflet.css' | prepend: site.digital-assets }}">
-<link rel="stylesheet" href="{{ '/leaflet/leaflet.fullscreen.css' | prepend: site.digital-assets }}">
-{% if site.data.theme.map-search == true %}<link rel="stylesheet" href="{{ '/leaflet/leaflet.fusesearch.css' | prepend: site.digital-assets }}">{%- endif -%}
-{% if site.data.theme.map-cluster == true %}<link rel="stylesheet" href="{{ '/leaflet/MarkerCluster.css' | prepend: site.digital-assets }}">
-<link rel="stylesheet" href="{{ '/leaflet/MarkerCluster.Default.css' | prepend: site.digital-assets }}">{% endif %}{%- endif -%}
+
+{% if page.layout == 'map' %}
+  <!-- Leaflet CSS from Unpkg -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+    integrity="sha384-–INSERT_HASH_HERE–"
+    crossorigin=""
+  >
+  <!-- Leaflet Fullscreen CSS from jsDelivr -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/leaflet.fullscreen@2.0.0/dist/leaflet.fullscreen.css"
+    integrity="sha384-–INSERT_HASH_HERE–"
+    crossorigin="anonymous"
+  >
+  {% if site.data.theme.map-search == true %}
+    <!-- Leaflet FuseSearch CSS from jsDelivr -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/leaflet-fusesearch@3.4.0/dist/leaflet.fusesearch.css"
+      integrity="sha384-–INSERT_HASH_HERE–"
+      crossorigin="anonymous"
+    >
+  {% endif %}
+  {% if site.data.theme.map-cluster == true %}
+    <!-- Leaflet MarkerCluster CSS from Unpkg -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"
+      integrity="sha384-–INSERT_HASH_HERE–"
+      crossorigin=""
+    >
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"
+      integrity="sha384-–INSERT_HASH_HERE–"
+      crossorigin=""
+    >
+  {% endif %}
+{% endif %}
+
+<!-- Your local cb.css -->
 <link rel="stylesheet" href="{{ '/assets/css/cb.css' | relative_url }}" type="text/css">
 
 {% comment %} 
