--- a/_includes/item/3d-model-viewer.html
+++ b/_includes/item/3d-model-viewer.html
@@ -32,7 +32,10 @@
 </style>{% endif %}
 <!-- add 3d viewer to page -->
 <div class="ratio ratio-4x3">
-    <model-viewer id="item-model-viewer" alt="{{ page.image_alt_text | default: page.description | default: page.title | escape }}" src="{{ page.object_location | relative_url }}"  shadow-intensity="1" camera-controls touch-action="pan-y" {% if page.image_small %}reveal="manual"{% endif %}>
+    <model-viewer id="item-model-viewer" alt="{{ page.image_alt_text | default: page.description | default: page.title | escape }}" src="{{ page.object_location | relative_url }}"  
+    shadow-intensity="1" 
+    camera-controls touch-action="pan-y" 
+    {% if page.image_small %}reveal="manual"{% endif %}>
         {% if page.image_small %}
         <div id="poster-image" slot="poster"></div>
         <button id="load-model-btn" class="btn btn-lg btn-primary" slot="poster">Load 3D Model</button>
